[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow="1"
reqwest={ version = "0.11", features = ["json"] }
tokio={ version = "1", features = ["full"] }
colored="2"
mime="0.3"
jsonxf="1"
